# Termokarst-yak

./: .gitignore  ALGORITHM.md  ARCHITECTURE.md  CHANGELOG.md  Cargo.toml  DATA_SOURCES.md  EXAMPLES.md  FINAL_REPORT.md  IMAGE_PROCESSING.md  PFLOTRAN_PORTING_SUMMARY.md  PROJECT_COMPLETE.md  PROJECT_SUMMARY.md  QUICK_SUMMARY.md  README.md  SATELLITE_UPDATE.md  UPDATE_SUMMARY.md  WEB_README.md  atlasov_formula_paper.docx  debug_params.rs  ИТОГИ_2026-04-08.md  РАБОТА_ЗАВЕРШЕНА.txt
apps/tauri-app/: BUGFIX.md  CHANGELOG.md  COMPLETION_SUMMARY.md  DIAMETER_FIX.md  ENGINE_INTEGRATION.md  FINAL_COMPLETE.md  FINAL_STATUS.md  QUICKSTART.md  README.md  STATUS.md  USAGE.md  index.html  package-lock.json  package.json
apps/tauri-app/src/: App.tsx  LocationPicker.tsx  ThermokarstMap.tsx  index.css
apps/tauri-app/src-tauri/: Cargo.toml  tauri.conf.json
apps/tauri-app/src-tauri/icons/: README.md
apps/tauri-app/src-tauri/src/: main.rs
apps/unity-simulation/: 3D_DEFORMATION.md  README.md  README_FULL.md  SETUP.md
apps/unity-simulation/Scripts/Core/: EnvironmentParams.cs  SoilType.cs  ThermokarstLens.cs
apps/unity-simulation/Scripts/Integration/: PhysicsIntegration.cs  ThermokarstBehaviour.cs
apps/unity-simulation/Scripts/Physics/: HeatTransfer.cs
apps/unity-simulation/Scripts/Procedural/: DeformableTerrainGrid.cs  NoiseGenerator.cs  TerrainCell.cs  TerrainGenerator.cs  ThermokarstErosionSystem.cs  ThermokarstSpawner.cs  VoronoiNoise.cs
apps/unity-simulation/Scripts/Simulation/: ThermokarstEngine.cs
apps/web/: index.html
apps/web/src/: App.css  App.tsx  LocationPicker.tsx  ThermokarstMap.tsx
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/cli/src/commands/: analyze.rs  batch.rs  config.rs  dataset.rs  image.rs  inverse.rs  mod.rs  simulate.rs  visualize.rs
crates/core/: Cargo.toml
crates/core/src/: dataset.rs  iryp.rs  iryp_params.rs  lib.rs  types.rs  validation.rs
crates/core/src/models/: iryp_params.rs  mod.rs
crates/core/src/types/: error.rs  mod.rs
crates/geology/: Cargo.toml
crates/geology/src/: consolidation.rs  lateral_expansion.rs  lib.rs  stability.rs
crates/geology/src/analysis/: mod.rs  stability.rs
crates/geology/src/processes/: consolidation.rs  lateral_expansion.rs  mod.rs
crates/image-processing/: Cargo.toml
crates/image-processing/src/: detection.rs  downloader.rs  lib.rs  photo.rs  satellite.rs
crates/physics/: Cargo.toml
crates/physics/src/: frozen_ground.rs  heat_transfer.rs  heat_transfer_2d.rs  lib.rs  newton_solver.rs  nfactor.rs  phase_transition.rs  richards.rs  snow.rs  subsidence.rs  surface_energy.rs  thaw.rs  thermal_conductivity.rs
crates/physics/src/hydraulic/: mod.rs  richards.rs
crates/physics/src/mechanical/: mod.rs
crates/physics/src/solvers/: mod.rs
crates/physics/src/thermal/: boundary_conditions.rs  heat_transfer.rs  mod.rs  surface_energy.rs  thaw.rs  thawing_index.rs  thermal_conductivity.rs
crates/protocol/: Cargo.toml
crates/protocol/src/: codec.rs  encoder.rs  lib.rs  traits.rs
crates/protocol/tests/: buffer_size_property_tests.rs  codec_tests.rs  empty_collection_property_tests.proptest-regressions  empty_collection_property_tests.rs  preservation_tests.rs  roundtrip_property_tests.proptest-regressions  roundtrip_property_tests.rs  traits_tests.rs
crates/simulation/: Cargo.toml
crates/simulation/src/: batch.rs  calibration.rs  engine.rs  inverse_modeling.rs  lib.rs  uncertainty.rs  visualization.rs
crates/simulation/src/analysis/: calibration.rs  mod.rs  uncertainty.rs
crates/simulation/src/modeling/: inverse_modeling.rs  mod.rs  satellite_integration.rs
crates/simulation/src/visualization/: iryp_visualization.rs  mod.rs
datasets/Permafrost temperature map/: Beer_2013_link-to-files.bib  Beer_2013_link-to-files.ris
datasets/permafrosts-data/: IRYP_v2.tab  land-11-00496.xml
docs/: ARCHITECTURE.md  COMPARISON.md  DATA_USAGE.md  IMPROVEMENTS_SUMMARY.md  INDEX.md  INVERSE_MODELING.md  NEXT_MODULES_QUICK.md  NEXT_STEPS_PORTING.md  PFLOTRAN_COMPARISON.md  PFLOTRAN_INTEGRATION.md  PFLOTRAN_MODULES.md  PFLOTRAN_PORTING.md  PFLOTRAN_QUICK_COMPARISON.md  REUSABLE_COMPONENTS.md  ROADMAP.md  USE_CASES.md
examples/: calculate_dataset.rs  comprehensive_test.rs  debug_iryp_params.rs  newton_richards_example.rs  simulate_iryp_sites.rs
pico-mono/protocol-client/: .npmignore  README.md  package-lock.json  package.json  tsconfig.json
pico-mono/protocol-client/src/: .gitkeep  codec.test.ts  codec.ts  index.ts  types.ts
pico-mono/protocol-client/src/decoders/: entity-state.test.ts  entity-state.ts
src/: App.tsx
tests/: calculate_simple.rs  test_params.rs  validation_atlasov.rs
