[workspace]
members = [
    "crates/core",
    "crates/physics",
    "crates/geology",
    "crates/simulation",
    "crates/cli",
    "crates/image-processing",
    "crates/protocol",
]
exclude = [
    "apps/tauri-app/src-tauri",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Thermokarst Research Team"]
license = "MIT"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
nalgebra = "0.33"
rayon = "1.10"
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
plotters = "0.3"
axum = "0.7"
tokio = { version = "1.0", features = ["full"] }
tower-http = { version = "0.5", features = ["cors"] }
