[package]
name = "thermokarst-cli"
version.workspace = true
edition.workspace = true

[[bin]]
name = "thermokarst"
path = "src/main.rs"

[dependencies]
thermokarst-core = { path = "../core" }
thermokarst-physics = { path = "../physics" }
thermokarst-geology = { path = "../geology" }
thermokarst-simulation = { path = "../simulation" }
clap.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
