[package]
name = "thermokarst-cli"
version.workspace = true
edition.workspace = true

[[bin]]
name = "thermokarst"
path = "src/main.rs"

[[example]]
name = "newton_richards_example"
path = "../../examples/newton_richards_example.rs"

[features]
download = ["thermokarst-image-processing/download"]
visualization = ["thermokarst-simulation/visualization"]

[dependencies]
thermokarst-core = { path = "../core" }
thermokarst-physics = { path = "../physics" }
thermokarst-geology = { path = "../geology" }
thermokarst-simulation = { path = "../simulation" }
thermokarst-image-processing = { path = "../image-processing" }
clap.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
