[package]
name = "thermokarst-simulation"
version.workspace = true
edition.workspace = true

[dependencies]
thermokarst-core = { path = "../core" }
thermokarst-physics = { path = "../physics" }
thermokarst-geology = { path = "../geology" }
rayon.workspace = true
serde.workspace = true
plotters = { workspace = true, optional = true }

[features]
visualization = ["plotters"]
