[package]
name = "thermokarst-simulation"
version.workspace = true
edition.workspace = true

[dependencies]
thermokarst-core = { path = "../core" }
thermokarst-physics = { path = "../physics" }
thermokarst-geology = { path = "../geology" }
rayon.workspace = true
serde.workspace = true
anyhow.workspace = true
plotters = { workspace = true, optional = true }
rand = "0.10.0"
rand_distr = "0.6.0"

[features]
default = ["visualization"]
visualization = ["plotters"]
