[package]
name = "thermokarst-tauri"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = ["protocol-asset"] }
tauri-plugin-shell = "2.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thermokarst-core = { path = "../../../crates/core" }
thermokarst-physics = { path = "../../../crates/physics" }
thermokarst-geology = { path = "../../../crates/geology" }
thermokarst-simulation = { path = "../../../crates/simulation" }
nalgebra = "0.33"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
